--- a/package.json
+++ b/package.json
@@ -13,11 +13,86 @@
   "author": "Kayla Fitzsimmons & Phil Gebhardt",
   "license": "MIT",
   "dependencies": {
-    "babel-core": "^6.20.0",
+    "core-decorators": "^0.12.3",
+    "fetch": "^1.1.0",
+    "firebase": "^3.6.0",
+    "font-awesome": "^4.7.0",
+    "font-awesome-webpack": "0.0.4",
+    "highlight.js": "^9.7.0",
+    "immutable": "^3.8.1",
+    "include-media": "^1.4.8",
+    "lodash": "^4.16.1",
+    "material-ui": "^0.16.1",
+    "meta-remarkable": "^0.1.0",
+    "normalizr": "^2.2.1",
     "react": "^15.4.1",
-    "react-dom": "^15.4.1"
+    "react-dom": "^15.4.1",
+    "react-inlinesvg": "^0.5.4",
+    "react-material-icons": "^1.0.1",
+    "react-router": "^2.8.1",
+    "react-scroll": "^1.4.2",
+    "react-tap-event-plugin": "^2.0.0",
+    "markdown-it": "latest",
+    "markdown-it-loader": "latest",
+    "redux-thunk": "^2.1.0",
+    "redux-ui": "0.0.15",
+    "wpapi": "^0.11.0"
+  },
+  "scripts": {
+    "build": "webpack  --config ./webpack.config.js",
+    "dev": "webpack-dev-server --config ./webpack.config.js"
   },
   "devDependencies": {
-    "webpack": "^1.14.0"
+    "autoprefixer": "^6.4.1",
+    "babel-cli": "^6.14.0",
+    "babel-core": "^6.18.2",
+    "babel-eslint": "^7.1.1",
+    "babel-loader": "^6.2.5",
+    "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-es2015-modules-amd": "^6.18.0",
+    "babel-plugin-transform-es2015-spread": "^6.8.0",
+    "babel-plugin-transform-runtime": "^6.15.0",
+    "babel-polyfill": "^6.20.0",
+    "babel-preset-es2015": "^6.14.0",
+    "babel-preset-es2015-native-modules": "^6.9.4",
+    "babel-preset-es2016": "^6.16.0",
+    "babel-preset-es2017": "^6.16.0",
+    "babel-preset-latest": "^6.16.0",
+    "babel-preset-minify": "0.0.0",
+    "babel-preset-react": "^6.16.0",
+    "babel-preset-stage-0": "^6.5.0",
+    "babel-runtime": "^6.11.6",
+    "css-loader": "^0.25.0",
+    "eslint": "^3.11.1",
+    "eslint-config-airbnb": "^13.0.0",
+    "eslint-loader": "^1.6.1",
+    "eslint-plugin-import": "^2.2.0",
+    "eslint-plugin-jsx-a11y": "^3.0.1",
+    "eslint-plugin-react": "^6.8.0",
+    "extract-text-webpack-plugin": "^2.0.0-beta.4",
+    "file-loader": "^0.9.0",
+    "flow-cli": "0.0.0-pre",
+    "highlight-loader": "^0.7.2",
+    "html-webpack-plugin": "^2.24.1",
+    "install": "^0.8.2",
+    "json-loader": "^0.5.4",
+    "less-loader": "^2.2.3",
+    "lodash": "^4.17.2",
+    "markdown-loader": "^0.1.7",
+    "modernizr-webpack-plugin": "^1.0.5",
+    "node-sass": "^3.10.0",
+    "npm": "^4.0.3",
+    "raw-loader": "^0.5.1",
+    "react-hot-loader": "^3.0.0-beta.5",
+    "redux-devtools": "^3.3.1",
+    "redux-logger": "^2.6.1",
+    "sass-loader": "^4.0.2",
+    "strip-loader": "^0.1.2",
+    "style-loader": "^0.13.1",
+    "underscore": "^1.8.3",
+    "url-loader": "^0.5.7",
+    "webpack": "^2.1.0-beta.27",
+    "webpack-dev-server": "^1.16.2",
+    "webpack-merge": "^1.0.2"
   }
 }
