--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "hack-your-mom",
   "version": "1.0.0",
-  "description": "ethical hacking",
+  "description": "ethically hacking baby boomers",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "webpack  --config ./webpack.config.babel.js",
+    "dev": "webpack-dev-server"
   },
   "keywords": [
     "hacking",
@@ -14,6 +15,7 @@
   "license": "MIT",
   "dependencies": {
     "core-decorators": "^0.12.3",
+    "express": "^4.14.0",
     "fetch": "^1.1.0",
     "firebase": "^3.6.0",
     "font-awesome": "^4.7.0",
@@ -22,8 +24,8 @@
     "immutable": "^3.8.1",
     "include-media": "^1.4.8",
     "lodash": "^4.16.1",
+    "markdown-it": "latest",
     "material-ui": "^0.16.1",
-    "meta-remarkable": "^0.1.0",
     "normalizr": "^2.2.1",
     "react": "^15.4.1",
     "react-dom": "^15.4.1",
@@ -32,15 +34,9 @@
     "react-router": "^2.8.1",
     "react-scroll": "^1.4.2",
     "react-tap-event-plugin": "^2.0.0",
-    "markdown-it": "latest",
-    "markdown-it-loader": "latest",
     "redux-thunk": "^2.1.0",
     "redux-ui": "0.0.15",
     "wpapi": "^0.11.0"
-  },
-  "scripts": {
-    "build": "webpack  --config ./webpack.config.js",
-    "dev": "webpack-dev-server --config ./webpack.config.js"
   },
   "devDependencies": {
     "autoprefixer": "^6.4.1",
@@ -77,13 +73,14 @@
     "install": "^0.8.2",
     "json-loader": "^0.5.4",
     "less-loader": "^2.2.3",
+    "loader-utils": "^0.2.16",
     "lodash": "^4.17.2",
     "markdown-loader": "^0.1.7",
     "modernizr-webpack-plugin": "^1.0.5",
     "node-sass": "^3.10.0",
     "npm": "^4.0.3",
     "raw-loader": "^0.5.1",
-    "react-hot-loader": "^3.0.0-beta.5",
+    "react-hot-loader": "^3.0.0-beta.6",
     "redux-devtools": "^3.3.1",
     "redux-logger": "^2.6.1",
     "sass-loader": "^4.0.2",
@@ -91,8 +88,8 @@
     "style-loader": "^0.13.1",
     "underscore": "^1.8.3",
     "url-loader": "^0.5.7",
-    "webpack": "^2.1.0-beta.27",
-    "webpack-dev-server": "^1.16.2",
+    "webpack": "^2.1.0-beta.25",
+    "webpack-dev-server": "^2.1.0-beta.2",
     "webpack-merge": "^1.0.2"
   }
 }
